--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
-  <header class="header"></header>
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <nav class="menu">
+          <ul class="menu__items">
+            <li class="menu__item-list">
+              <a class="menu__list-link" href="#">About</a>
+            </li>
+            <li class="menu__item-list">
+              <a class="menu__list-link" href="#">Gallery</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="logo-link" href="#">
+          <img src="images/logo.png" alt="logo" class="logo-img">
+        </a>
+        <nav class="menu">
+          <ul class="menu__items">
+            <li class="menu__item-list">
+              <a class="menu__list-link" href="#">Blog</a>
+            </li>
+            <li class="menu__item-list">
+              <a class="menu__list-link" href="#">Contact</a>
+            </li>
+          </ul>
+          <button class="header__btn" href="#">
+            <img src="images/icon_menu.svg" alt="icon menu" class="header__btn-img">
+          </button>
+
+        </nav>
+      </div>
+    </div>
+  </header>
   <div class="wrapper">
     <main class="main"></main>
     <footer class="footer"></footer>
