--- a/app/index.html
+++ b/app/index.html
@@ -5,49 +5,72 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&family=Open+Sans:wght@400;600&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
-  <header class="header">
-    <div class="container">
-      <div class="header__inner">
-        <nav class="menu">
-          <ul class="menu__items">
-            <li class="menu__item-list">
-              <a class="menu__list-link" href="#">About</a>
-            </li>
-            <li class="menu__item-list">
-              <a class="menu__list-link" href="#">Gallery</a>
-            </li>
-          </ul>
-        </nav>
-        <a class="logo-link" href="#">
-          <img src="images/logo.png" alt="logo" class="logo-img">
-        </a>
-        <nav class="menu">
-          <ul class="menu__items">
-            <li class="menu__item-list">
-              <a class="menu__list-link" href="#">Blog</a>
-            </li>
-            <li class="menu__item-list">
-              <a class="menu__list-link" href="#">Contact</a>
-            </li>
-          </ul>
+
+  <div class="wrapper">
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <nav class="menu">
+            <ul class="menu__items">
+              <li class="menu__item-list">
+                <a class="menu__list-link" href="#">About</a>
+              </li>
+              <li class="menu__item-list">
+                <a class="menu__list-link" href="#">Gallery</a>
+              </li>
+            </ul>
+          </nav>
+          <a class="logo-link" href="#">
+            <img src="images/logo.png" alt="logo" class="logo-img">
+          </a>
+          <nav class="menu">
+            <ul class="menu__items">
+              <li class="menu__item-list">
+                <a class="menu__list-link" href="#">Blog</a>
+              </li>
+              <li class="menu__item-list">
+                <a class="menu__list-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </nav>
           <button class="header__btn" href="#">
             <img src="images/icon_menu.svg" alt="icon menu" class="header__btn-img">
           </button>
-
-        </nav>
+        </div>
       </div>
-    </div>
-  </header>
-  <div class="wrapper">
+    </header>
     <main class="main"></main>
-    <footer class="footer"></footer>
+
+    <footer class="footer">
+      <div class="comtainer">
+        <div class="footer__content">
+          <div class="footer__info">
+            <h6 class="footer__title">Contact Us</h6>
+            <p class="footer__text">Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably
+              occupy</p>
+              <a class="footer__email" href="mainto:bkzd18kholdarov@gmail.com" target="_blank" >ouremailaddress@email.com</a>
+          </div>
+          <div class="footer__social"></div>
+          <div class="footer__menu"></div>
+
+        </div>
+        <div class="copyright">
+          <p>
+            674 Gonzales Drive. Washington, PA 15301
+          </p>
+        </div>
+      </div>
+    </footer>
   </div>
 
 
