--- a/app/index.html
+++ b/app/index.html
@@ -52,23 +52,48 @@
     <main class="main"></main>
 
     <footer class="footer">
-      <div class="comtainer">
-        <div class="footer__content">
-          <div class="footer__info">
-            <h6 class="footer__title">Contact Us</h6>
-            <p class="footer__text">Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably
-              occupy</p>
-              <a class="footer__email" href="mainto:bkzd18kholdarov@gmail.com" target="_blank" >ouremailaddress@email.com</a>
+      <div class="footer__content">
+        <div class="container">
+          <div class="footer__inner">
+            <div class="footer__info">
+              <h6 class="footer__info-title">Contact Us</h6>
+              <p class="footer__info-text">Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you
+                probably
+                occupy</p>
+              <a class="footer__info-email" href="mainto:bkzd18kholdarov@gmail.com"
+                target="_blank">ouremailaddress@email.com</a>
+              <div class="footer__form">
+                <input class="footer__form-input" type="text" placeholder="Subscribe by email">
+                <button class="footer__form-btn" type="submit">Send</button>
+              </div>
+            </div>
+
+            <div class="footer__social">
+              <ul class="footer__social-list">
+                <li class="footer__social-item"><a class="footer__social-link footer__social-link--facebook " href="#">Facebook</a></li>
+                <li class="footer__social-item"><a class="footer__social-link footer__social-link--instagram " href="#">Instagram</a></li>
+                <li class="footer__social-item"><a class="footer__social-link footer__social-link--pinterest " href="#">Pinterest</a></li>
+                <li class="footer__social-item"><a class="footer__social-link footer__social-link--whatsapp " href="#">WhatsApp</a></li>
+                <li class="footer__social-item"><a class="footer__social-link footer__social-link--youtube " href="#">Youtube</a></li>
+              </ul>
+            </div>
+
+            <div class="footer__menu">
+              <ul class="footer__menu-items">
+                <li class="footer__menu-item"><a class="footer__menu-link" href="#">Delivery</a></li>
+                <li class="footer__menu-item"><a class="footer__menu-link" href="#">FAQ</a></li>
+                <li class="footer__menu-item"><a class="footer__menu-link" href="#">Help</a></li>
+                <li class="footer__menu-item"><a class="footer__menu-link" href="#">More About Us</a></li>
+              </ul>
+            </div>
           </div>
-          <div class="footer__social"></div>
-          <div class="footer__menu"></div>
 
         </div>
-        <div class="copyright">
-          <p>
-            674 Gonzales Drive. Washington, PA 15301
-          </p>
-        </div>
+      </div>
+      <div class="copyright">
+        <p>
+          674 Gonzales Drive. Washington, PA 15301
+        </p>
       </div>
     </footer>
   </div>
