--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,20 @@
           <button class="header__btn" href="#">
             <img src="images/icon_menu.svg" alt="icon menu" class="header__btn-img">
           </button>
+          <div class="rightside-menu">
+            <button class="rightside-menu__btn">
+              <img class="rightside-menu__btn-close" src="images/close.svg" alt="">
+            </button>
+            <div class="rightside-menu__content">
+              <img class="rightside-menu__content-logo" src="images/logo-big.png" alt="">
+              <h4 class="rightside-menu__content-title">Furniture for life</h4>
+              <p class="rightside-menu__content-text">
+                Sustainable hot chicken skateboard, dreamcatcher meggings
+                actually squid. Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn
+              </p>
+              <img class="rightside-menu__content-img" src="images/r-s_img.jpg" alt="">
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -70,11 +84,16 @@
 
             <div class="footer__social">
               <ul class="footer__social-list">
-                <li class="footer__social-item"><a class="footer__social-link footer__social-link--facebook " href="#">Facebook</a></li>
-                <li class="footer__social-item"><a class="footer__social-link footer__social-link--instagram " href="#">Instagram</a></li>
-                <li class="footer__social-item"><a class="footer__social-link footer__social-link--pinterest " href="#">Pinterest</a></li>
-                <li class="footer__social-item"><a class="footer__social-link footer__social-link--whatsapp " href="#">WhatsApp</a></li>
-                <li class="footer__social-item"><a class="footer__social-link footer__social-link--youtube " href="#">Youtube</a></li>
+                <li class="footer__social-item"><a class="footer__social-link footer__social-link--facebook "
+                    href="#">Facebook</a></li>
+                <li class="footer__social-item"><a class="footer__social-link footer__social-link--instagram "
+                    href="#">Instagram</a></li>
+                <li class="footer__social-item"><a class="footer__social-link footer__social-link--pinterest "
+                    href="#">Pinterest</a></li>
+                <li class="footer__social-item"><a class="footer__social-link footer__social-link--whatsapp "
+                    href="#">WhatsApp</a></li>
+                <li class="footer__social-item"><a class="footer__social-link footer__social-link--youtube "
+                    href="#">Youtube</a></li>
               </ul>
             </div>
 
