turn on slick carousel

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="css/slick.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&family=Open+Sans:wght@400;600&display=swap"
@@ -68,28 +70,41 @@
       </div>
     </header>
     <main class="main">
-      <section class="main-top">
+      <section class="main-content">
         <div class="container">
-          <div class="main-top__inner">
+          <div class="main-content__inner">
 
-            <div class="main-top__slides">
-              <div class="main-top__slide fade">
-                <div class="main-top__left">
-                  <div class="main-top__left-bg"></div>
-                  <img class="main-top__left-img" src="images/main__chair.png" style="max-width:703px; width:100%"
+            <div class="main-content__slides">
+              <div class="main-content__slide fade">
+                <div class="main-content__left">
+                  <div class="main-content__left-bg"></div>
+                  <img class="main-content__left-img" src="images/main__chair.png" style="max-width:703px; width:100%"
                     alt="slide-img-1">
                 </div>
-                <div class="main-top__right">
-                  <h1 class="main-top__right-title">Furniture collection</h1>
-                  <p class="main-top__right-text">
+                <div class="main-content__right">
+                  <h1 class="main-content__right-title">Furniture collection</h1>
+                  <p class="main-content__right-text">
                     Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical
                     drinking vinegar austint
                   </p>
                 </div>
-
-
               </div>
 
+              <div class="main-content__slide fade">
+                <div class="main-content__left">
+                  <div class="main-content__left-bg"></div>
+                  <img class="main-content__left-img" src="images/main__chair.png" style="max-width:703px; width:100%"
+                    alt="slide-img-1">
+                </div>
+                <div class="main-content__right">
+                  <h1 class="main-content__right-title">Furniture collection</h1>
+                  <p class="main-content__right-text">
+                    Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical
+                    drinking vinegar austint
+                  </p>
+                </div>
+              </div>
+              
             </div>
             <br>
 
@@ -155,9 +170,15 @@
     </footer>
   </div>
 
+  
 
-
+  <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script> -->
+  <!-- <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
   <script src="js/main.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="js/slick.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script> -->
+  <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
 </body>
 
 </html>
