main-slider is done

--- a/app/index.html
+++ b/app/index.html
@@ -71,21 +71,22 @@
     </header>
     <main class="main">
       <section class="main-content">
-        <div class="container">
+        <div class="container-main">
           <div class="main-content__inner">
 
             <div class="main-content__slides">
               <div class="main-content__slide fade">
                 <div class="main-content__left">
                   <div class="main-content__left-bg"></div>
-                  <img class="main-content__left-img" src="images/main__chair.png" style="max-width:703px; width:100%"
+                  <img class="main-content__left-img" src="images/main__chair.png" 
                     alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
                   <h1 class="main-content__right-title">Furniture collection</h1>
                   <p class="main-content__right-text">
-                    Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical
-                    drinking vinegar austint
+                    Deep v you probably haven't heard of them banh mi synth actually affogato. <br>
+                    Aesthetic lyft ethical
+                    drinking vinegar austint.
                   </p>
                 </div>
               </div>
@@ -93,14 +94,47 @@
               <div class="main-content__slide fade">
                 <div class="main-content__left">
                   <div class="main-content__left-bg"></div>
-                  <img class="main-content__left-img" src="images/main__chair.png" style="max-width:703px; width:100%"
+                  <img class="main-content__left-img" src="images/main__chair.png" 
                     alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
                   <h1 class="main-content__right-title">Furniture collection</h1>
                   <p class="main-content__right-text">
-                    Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical
-                    drinking vinegar austint
+                    Deep v you probably haven't heard of them banh mi synth actually affogato. <br>
+                    Aesthetic lyft ethical
+                    drinking vinegar austint.
+                  </p>
+                </div>
+              </div>
+
+              <div class="main-content__slide fade">
+                <div class="main-content__left">
+                  <div class="main-content__left-bg"></div>
+                  <img class="main-content__left-img" src="images/main__chair.png" 
+                    alt="slide-img-1">
+                </div>
+                <div class="main-content__right">
+                  <h1 class="main-content__right-title">Furniture collection</h1>
+                  <p class="main-content__right-text">
+                    Deep v you probably haven't heard of them banh mi synth actually affogato. <br>
+                    Aesthetic lyft ethical
+                    drinking vinegar austint.
+                  </p>
+                </div>
+              </div>
+
+              <div class="main-content__slide fade">
+                <div class="main-content__left">
+                  <div class="main-content__left-bg"></div>
+                  <img class="main-content__left-img" src="images/main__chair.png" 
+                    alt="slide-img-1">
+                </div>
+                <div class="main-content__right">
+                  <h1 class="main-content__right-title">Furniture collection</h1>
+                  <p class="main-content__right-text">
+                    Deep v you probably haven't heard of them banh mi synth actually affogato. <br>
+                    Aesthetic lyft ethical
+                    drinking vinegar austint.
                   </p>
                 </div>
               </div>
@@ -108,13 +142,10 @@
             </div>
             <br>
 
-            <div style="text-align:center">
-              <span class="dot"></span>
-              <span class="dot"></span>
-              <span class="dot"></span>
-            </div>
+            
           </div>
         </div>
+        <div class="main-content__bottom-line"></div>
       </section>
     </main>
 
