about-slider is done

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Desire</title>
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="css/slick.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -74,12 +74,11 @@
         <div class="container-main">
           <div class="main-content__inner">
 
-            <div class="main-content__slides">
+            <div class="main-content__slider">
               <div class="main-content__slide fade">
                 <div class="main-content__left">
                   <div class="main-content__left-bg"></div>
-                  <img class="main-content__left-img" src="images/main__chair.png" 
-                    alt="slide-img-1">
+                  <img class="main-content__left-img" src="images/main__chair.png" alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
                   <h1 class="main-content__right-title">Furniture collection</h1>
@@ -94,8 +93,7 @@
               <div class="main-content__slide fade">
                 <div class="main-content__left">
                   <div class="main-content__left-bg"></div>
-                  <img class="main-content__left-img" src="images/main__chair.png" 
-                    alt="slide-img-1">
+                  <img class="main-content__left-img" src="images/main__chair.png" alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
                   <h1 class="main-content__right-title">Furniture collection</h1>
@@ -110,8 +108,7 @@
               <div class="main-content__slide fade">
                 <div class="main-content__left">
                   <div class="main-content__left-bg"></div>
-                  <img class="main-content__left-img" src="images/main__chair.png" 
-                    alt="slide-img-1">
+                  <img class="main-content__left-img" src="images/main__chair.png" alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
                   <h1 class="main-content__right-title">Furniture collection</h1>
@@ -123,29 +120,73 @@
                 </div>
               </div>
 
-              <div class="main-content__slide fade">
-                <div class="main-content__left">
-                  <div class="main-content__left-bg"></div>
-                  <img class="main-content__left-img" src="images/main__chair.png" 
-                    alt="slide-img-1">
-                </div>
-                <div class="main-content__right">
-                  <h1 class="main-content__right-title">Furniture collection</h1>
-                  <p class="main-content__right-text">
-                    Deep v you probably haven't heard of them banh mi synth actually affogato. <br>
-                    Aesthetic lyft ethical
-                    drinking vinegar austint.
-                  </p>
-                </div>
-              </div>
-              
             </div>
             <br>
 
-            
+
           </div>
         </div>
         <div class="main-content__bottom-line"></div>
+      </section>
+
+      <section class="about">
+        <div class="container-about">
+          <div class="about__inner">
+            <div class="about__content">
+              <h3 class="about__title">Furniture new collection</h3>
+              <p class="about__text">
+                Deep v you probably haven't heard of them banh mi synth actually affogato.
+                Aesthetic lyft ethical drinking vinegar austint</p>
+            </div>
+
+            <div class="about__slider">
+              <div class="about__slide">
+                <img class="about__image" src="./images/about-img-1.jpg" alt="">
+                <div class="about__slide-content">
+                  <p class="about__slide-content__title">Truffaut literally trust</p>
+                  <span class="about__slide-content__text">Living room furntiture | Chair</span>
+                </div>
+              </div>
+              <div class="about__slide">
+                <img class="about__image" src="./images/about-img-2.jpg" alt="">
+                <div class="about__slide-content">
+                  <p class="about__slide-content__title">Truffaut literally trust</p>
+                  <span class="about__slide-content__text">Living room furntiture | Chair</span>
+                </div>
+              </div>
+              <div class="about__slide">
+                <img class="about__image" src="./images/about-img-3.jpg" alt="">
+                <div class="about__slide-content">
+                  <p class="about__slide-content__title">Truffaut literally trust</p>
+                  <span class="about__slide-content__text">Living room furntiture | Chair</span>
+                </div>
+              </div>
+
+              <div class="about__slide">
+                <img class="about__image" src="./images/about-img-4.jpg" alt="">
+                <div class="about__slide-content">
+                  <p class="about__slide-content__title">Truffaut literally trust</p>
+                  <span class="about__slide-content__text">Living room furntiture | Chair</span>
+                </div>
+              </div>
+              <div class="about__slide">
+                <img class="about__image" src="./images/about-img-5.jpg" alt="">
+                <div class="about__slide-content">
+                  <p class="about__slide-content__title">Truffaut literally trust</p>
+                  <span class="about__slide-content__text">Living room furntiture | Chair</span>
+                </div>
+              </div>
+              <div class="about__slide">
+                <img class="about__image" src="./images/about-img-3.jpg" alt="">
+                <div class="about__slide-content">
+                  <p class="about__slide-content__title">Truffaut literally trust</p>
+                  <span class="about__slide-content__text">Living room furntiture | Chair</span>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
@@ -201,7 +242,7 @@
     </footer>
   </div>
 
-  
+
 
   <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script> -->
   <!-- <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
