call-to-action is done

--- a/app/index.html
+++ b/app/index.html
@@ -71,14 +71,14 @@
     </header>
     <main class="main">
       <section class="main-content">
-        <div class="container-main">
+        <div class="container-middle">
           <div class="main-content__inner">
 
             <div class="main-content__slider">
               <div class="main-content__slide fade">
                 <div class="main-content__left">
                   <div class="main-content__left-bg"></div>
-                  <img class="main-content__left-img" src="images/main__chair.png" alt="slide-img-1">
+                  <img class="main-content__left-img" src="images/main-chair.png" alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
                   <h1 class="main-content__right-title">Furniture collection</h1>
@@ -93,7 +93,7 @@
               <div class="main-content__slide fade">
                 <div class="main-content__left">
                   <div class="main-content__left-bg"></div>
-                  <img class="main-content__left-img" src="images/main__chair.png" alt="slide-img-1">
+                  <img class="main-content__left-img" src="images/main-chair.png" alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
                   <h1 class="main-content__right-title">Furniture collection</h1>
@@ -108,7 +108,7 @@
               <div class="main-content__slide fade">
                 <div class="main-content__left">
                   <div class="main-content__left-bg"></div>
-                  <img class="main-content__left-img" src="images/main__chair.png" alt="slide-img-1">
+                  <img class="main-content__left-img" src="images/main-chair.png" alt="slide-img-1">
                 </div>
                 <div class="main-content__right">
                   <h1 class="main-content__right-title">Furniture collection</h1>
@@ -130,7 +130,7 @@
       </section>
 
       <section class="about">
-        <div class="container-about">
+        <div class="container-max">
           <div class="about__inner">
             <div class="about__content">
               <h3 class="about__title">Furniture new collection</h3>
@@ -188,6 +188,25 @@
           </div>
         </div>
       </section>
+
+      <section class="call-to-action container-max">
+        <div class="call-to-action__bg-color">
+          <div class="container">
+            <div class="call-to-action__inner">
+              <div class="call-to-action__content">
+                <h2 class="call-to-action__title">
+                  Aesthetic <br>
+                  ethical drinking</h2>
+                <p class="call-to-action__text">
+                  Deep v you probably haven't heard of them banh mi synth actually affogato. Artlyft ethical the one
+                  drinking vinegar austint
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <footer id="footer" class="footer">
