how-it-works is done

--- a/app/index.html
+++ b/app/index.html
@@ -218,18 +218,18 @@
                   <p class="how-it-works__step-text">Kinfolk scenester authentic craft beer truffaut irony
                     intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche</p>
                 </div>
-                <div class="how-it-works__step step-bottom">
+                <div class="how-it-works__step step-2 step-bottom">
                   <h4 class="how-it-works__step-title how-it-works__step-title-2">Measurements</h4>
                   <p class="how-it-works__step-text">Intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun
                     venmo viral cliche</p>
                 </div>
               </div>
               <div class="how-it-works__steps-start">
-                <div class="how-it-works__step">
+                <div class="how-it-works__step step-3">
                   <h4 class="how-it-works__step-title how-it-works__step-title-3">Production</h4>
                   <p class="how-it-works__step-text">Everyday carry actually neutra authentic kogi shabby chic</p>
                 </div>
-                <div class="how-it-works__step step-bottom">
+                <div class="how-it-works__step step-4 step-bottom">
                   <h4 class="how-it-works__step-title how-it-works__step-title-4">Delivery and Assembley</h4>
                   <p class="how-it-works__step-text step-text-last">Fanny pack church-key cornhole, banh mi thundercats gochujang keytar</p>
                 </div>
