gallery is done

--- a/app/index.html
+++ b/app/index.html
@@ -207,7 +207,7 @@
         </div>
       </section>
 
-      <div class="how-it-works">
+      <section class="how-it-works">
         <div class="container">
           <div class="how-it-works__inner">
             <h3 class="how-it-works__title">How it works</h3>
@@ -231,13 +231,42 @@
                 </div>
                 <div class="how-it-works__step step-4 step-bottom">
                   <h4 class="how-it-works__step-title how-it-works__step-title-4">Delivery and Assembley</h4>
-                  <p class="how-it-works__step-text step-text-last">Fanny pack church-key cornhole, banh mi thundercats gochujang keytar</p>
+                  <p class="how-it-works__step-text step-text-last">Fanny pack church-key cornhole, banh mi thundercats
+                    gochujang keytar</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
+
+      <section class="gallery">
+        <div class="container-max">
+          <div class="gallery__inner">
+            <div class="gallery__filter">
+              <button class="gallery__filter-btn">Bedroom furniture</button>
+              <button class="gallery__filter-btn">Living room furniture</button>
+              <button class="gallery__filter-btn">Office furniture</button>
+              <button class="gallery__filter-btn">Dining room futniture</button>
+              <button class="gallery__filter-btn">Chair</button>
+            </div>
+
+            <div class="gallery__images">
+              <div class="gallery__left">
+                <img class="galler__left-image" src="./images/gallery-img-1.jpg" alt="gallery img">
+              </div>
+              <div class="gallery__right">
+                <img class="gallery__right-image" src="./images/gallery-img-2.jpg" alt="gallery img">
+                <img class="gallery__right-image" src="./images/gallery-img-3.jpg" alt="gallery img">
+                <img class="gallery__right-image" src="./images/gallery-img-4.jpg" alt="gallery img">
+                <img class="gallery__right-image" src="./images/gallery-img-5.jpg" alt="gallery img">
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
 
     </main>
 
