--- a/app/index.html
+++ b/app/index.html
@@ -25,20 +25,20 @@
           <nav class="menu">
             <ul class="menu__items">
               <li class="menu__item-list">
-                <a class="menu__list-link" href="#">About</a>
+                <a class="menu__list-link" href="#about">About</a>
               </li>
               <li class="menu__item-list">
-                <a class="menu__list-link" href="#">Gallery</a>
+                <a class="menu__list-link" href="#gallery">Gallery</a>
               </li>
             </ul>
           </nav>
-          <a class="logo-link" href="#">
+          <a class="logo-link" href="#home">
             <img src="images/logo.png" alt="logo" class="logo-img">
           </a>
           <nav class="menu">
             <ul class="menu__items">
               <li class="menu__item-list">
-                <a class="menu__list-link" href="#">Blog</a>
+                <a class="menu__list-link" href="#blog">Blog</a>
               </li>
               <li class="menu__item-list">
                 <a class="menu__list-link" href="#footer">Contact</a>
@@ -70,7 +70,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="main-content">
+      <section id="home" class="main-content">
         <div class="container-middle">
           <div class="main-content__inner">
 
@@ -129,7 +129,7 @@
         <div class="main-content__bottom-line"></div>
       </section>
 
-      <section class="about">
+      <section id="about" class="about">
         <div class="container-max">
           <div class="about__inner">
             <div class="about__content">
@@ -240,7 +240,7 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section id="gallery" class="gallery">
         <div class="container-max">
           <div class="gallery__inner">
             <div class="gallery__filter">
@@ -263,6 +263,46 @@
               </div>
             </div>
 
+          </div>
+        </div>
+      </section>
+
+      <section id="blog" class="blog">
+        <div class="container">
+          <div class="blog__inner">
+            <h3 class="blog__heading">
+              More inspiration ideas in our blog
+            </h3>
+            <div class="blog__posts">
+              <div class="blog__post">
+                <a class="blog__post-link" href="">
+                  <img class="blog__post-image" src="./images/blog-1.jpg" alt="post img">
+                </a>
+                <span class="blog__post-category">
+                  March 12, 2020 | by Ann Summers | Inrerior
+                </span>
+                <a href="" class="blog__post-text-link">
+                  <p class="blog__post-text">
+                    Listicle actually selvage activated charcoal for the drinking vinegar
+                  </p>
+                </a>
+              </div>
+              <div class="blog__post">
+                <a class="blog__post-link" href="">
+                  <img class="blog__post-image" src="./images/blog-2.jpg" alt="post img">
+                </a>
+                <span class="blog__post-category">
+                  September 28,2020 | by Finnagan Morningstar | Dining room interior
+                </span>
+
+                <a href="" class="blog__post-text-link">
+                  <p class="blog__post-text">
+                    Red selfies edison bulb four dollar toast humblebrag
+                  </p>
+                </a>
+
+              </div>
+            </div>
           </div>
         </div>
       </section>
